<resources>
    <string name="app_name">InheritanceSupport</string>
    <string name="shell_status">Android runnable implementation with CommonOS consumer contract</string>
    <string name="label_case_name">Case Name</string>
    <string name="hint_case_name">Parent inheritance prep</string>
    <string name="label_item_type">Item Type</string>
    <string name="label_owner_name">Owner or Person</string>
    <string name="hint_owner_name">Father or child A</string>
    <string name="label_amount">Amount JPY</string>
    <string name="hint_amount">5000000</string>
    <string name="label_due_date">Due Date</string>
    <string name="hint_due_date">2026-04-21</string>
    <string name="label_status">Status</string>
    <string name="label_sharing">Sharing</string>
    <string name="label_priority">Priority</string>
    <string name="label_memo">Memo</string>
    <string name="hint_memo">Inheritance or handover note</string>
    <string name="button_save">Save Item</string>
    <string name="button_sample">Insert Sample</string>
    <string name="button_clear">Clear Data</string>
    <string name="label_summary">Summary</string>
    <string name="label_records">Records</string>
</resources>
